<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userCredentials"
            type="com.example.authorization.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/fragment_reset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResetFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/reset_input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_margin_horizontal"
            android:layout_marginLeft="@dimen/component_margin_horizontal"
            android:layout_marginEnd="@dimen/component_margin_horizontal"
            android:layout_marginRight="@dimen/component_margin_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/reset_input_layout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={userCredentials.email}"
                android:id="@+id/reset_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_vertical"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/reset_input_layout_password_confirmation"
            app:layout_constraintEnd_toEndOf="@+id/reset_input_layout_email"
            app:layout_constraintStart_toStartOf="@+id/reset_input_layout_email"
            app:layout_constraintTop_toBottomOf="@+id/reset_input_layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={userCredentials.password}"
                android:id="@+id/reset_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_input_layout_password_confirmation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_vertical"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/reset_button_reset_password"
            app:layout_constraintEnd_toEndOf="@+id/reset_input_layout_password"
            app:layout_constraintStart_toStartOf="@+id/reset_input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/reset_input_layout_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_input_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button_reset_password"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_vertical"
            android:text="@string/reset_password"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/reset_input_layout_password_confirmation"
            app:layout_constraintTop_toBottomOf="@+id/reset_input_layout_password_confirmation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button_sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/component_margin_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>